# mumbai-hack-dhandho

./: README.md  package-lock.json  package.json
backend/: main.py  pyproject.toml
backend/agents/: __init__.py  analyzer_agent.py  fetcher_agent.py  orchestrator.py  parser_agent.py  scraper_agent.py  test_env.py
backend/data/: upcoming_dates.json
backend/data/analyses/: ASIANPAINT_20251017_030643.json  ASIANPAINT_20251017_040632.json  ITC_20251017_031646.json  SUNPHARMA_20251017_025406.json  SUNPHARMA_20251017_040258.json  TCS_20251009_011110.json  WIPRO_20251017_023017.json
public/: index.html  manifest.json
src/: App.js
src/components/: Dashboard.jsx  LandingPage.jsx
src/services/: api.js
